--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
       <!--/ Abstract. -->
       <div class="column is-four-fifths"></div>
       <div class="has-text-centered">
-        <h2 class="title is-3">Video</h2>
+        <!-- <h2 class="title is-3">Video</h2>-->
         
         <!-- TODO replace the place holder video with the correct video and delete the plaveholder video from folder -->
         <!-- 
